<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context="com.mperson.missingchild.MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="30dp"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/bg" />

        <TextView
            android:layout_width="231dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="5dp"
            android:text="@string/MissingPerson"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_police"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/Police"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/button_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:text="@string/Public"
            android:textSize="25sp"
            android:textStyle="bold"
            />




    </LinearLayout>


</LinearLayout>