<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@drawable/police_solid_bg"
    tools:context="com.mperson.missingchild.PoliceLogin">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/police_solid_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/pclogin"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/cardview_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="20dp">


            <EditText
                android:id="@+id/Email"
                android:layout_marginTop="5dp"
                android:drawablePadding="15dp"
                android:padding="13dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/bcg"
                android:drawableLeft="@drawable/email_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/pwd"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/lock_24"
                android:drawablePadding="15dp"
                android:padding="13dp"
                android:layout_width="match_parent"
                android:background="@drawable/bcg"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pwd" />
            <TextView
                android:id="@+id/fgpc"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textColor="#FF00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fgt"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/btn_pc_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:background="#007D96"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:text="@string/Login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/noacc"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/btn_pc_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/white"
                    android:text=" Register Now"
                    android:textAllCaps="false"
                    android:textColor="#B22222"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="0dp"
            app:cardCornerRadius="45dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/police_icon"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</RelativeLayout>